--- a/frontend/app/courseDetail/[courseId]/_components/Modal.css
+++ b/frontend/app/courseDetail/[courseId]/_components/Modal.css
@@ -16,13 +16,18 @@
   }
   
   .close-button {
+    position: fixed;  /* Changed from absolute to fixed */
+    top: 10px;
+    right: 10px;
     background-color: #e74c3c;
     color: white;
     border: none;
-    padding: 30px; /* Bigger padding */
+    padding: 10px 15px;  /* Adjusted padding */
     cursor: pointer;
-    margin-top: auto;
-    font-size: 24px; /* Larger font size */
+    font-size: 24px;  /* Increased font size */
+    font-weight: bold;  /* Make the X bold */
+    line-height: 1;  /* Adjust line height */
+    z-index: 1010;  /* Increase z-index to make sure it appears above modal */
   }
   
   .close-button:hover {
@@ -50,4 +55,28 @@
     margin: 10px;  /* More margin for better spacing */
     border-radius: 4px;
   }
+  .analytics-button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 20px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 18px;
+  }
+  
+  .analytics-button:hover {
+    background-color: #2980b9;
+  }
+  
+  .analytics-side-pane {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%; /* Adjust the width as needed */
+    height: 100%;
+    background-color: #f2f2f2;
+    overflow-y: auto;
+  }
+  
   
