--- a/frontend/app/courseDetail/[courseId]/_components/Modal.css
+++ b/frontend/app/courseDetail/[courseId]/_components/Modal.css
@@ -6,6 +6,7 @@
     height: 100%;
     background-color: #ffffff;
     display: flex;
+    padding-top: 100px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -80,3 +81,7 @@
   }
   
   
+h2 {
+   
+    font-size: 24px;
+}
