--- a/frontend/app/courseDetail/[courseId]/_components/Modal.css
+++ b/frontend/app/courseDetail/[courseId]/_components/Modal.css
@@ -8,7 +8,7 @@
   display: flex;
   padding-top: 100px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   z-index: 1000;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
